[gd_scene load_steps=23 format=2]

[ext_resource path="res://Ships/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Libraries/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Ships/Player/States/Move.gd" type="Script" id=3]
[ext_resource path="res://Ships/Player/States/Travel.gd" type="Script" id=4]
[ext_resource path="res://Ships/Player/States/Dock.gd" type="Script" id=5]
[ext_resource path="res://Ships/Player/PlayerShip.gd" type="Script" id=6]
[ext_resource path="res://Ships/Player/States/Precision.gd" type="Script" id=7]
[ext_resource path="res://Ships/Player/player_map_icon.tres" type="Resource" id=8]
[ext_resource path="res://Ships/Player/PlayerGun.gd" type="Script" id=9]
[ext_resource path="res://Ships/Player/Cargo.gd" type="Script" id=10]
[ext_resource path="res://VFX/Explosion/Explosion.tscn" type="PackedScene" id=11]
[ext_resource path="res://Ships/Player/PlayerLaserGun.gd" type="Script" id=12]
[ext_resource path="res://Ships/Guns/LaserGun/LaserGun.tscn" type="PackedScene" id=13]
[ext_resource path="res://Ships/Guns/Projectiles/PlasmaShotPlayer.tscn" type="PackedScene" id=14]
[ext_resource path="res://Ships/Player/EngineAudio.tscn" type="PackedScene" id=15]
[ext_resource path="res://VFX/MoveTrail.tscn" type="PackedScene" id=17]
[ext_resource path="res://Ships/Player/VFX.gd" type="Script" id=18]
[ext_resource path="res://VFX/DustEmitter.tscn" type="PackedScene" id=19]
[ext_resource path="res://Ships/Player/PlayerGun.tscn" type="PackedScene" id=21]
[ext_resource path="res://VFX/exhaust_sprite_3.png" type="Texture" id=22]
[ext_resource path="res://Ships/Player/Player_Landing.wav" type="AudioStream" id=24]

[sub_resource type="ImageTexture" id=1]

[node name="PlayerShip" instance=ExtResource( 1 )]
light_mask = 0
scale = Vector2( 2, 2 )
collision_mask = 14
script = ExtResource( 6 )
projectile_mask = 6
ExplosionEffect = ExtResource( 11 )
map_icon = ExtResource( 8 )

[node name="Sprite" parent="." index="0"]
light_mask = 0
position = Vector2( 0, 2.38419e-07 )
scale = Vector2( 1.5, 1.5 )
normal_map = SubResource( 1 )

[node name="CollisionShape" parent="." index="1"]
position = Vector2( 0, -13.3333 )
rotation = -3.12938
polygon = PoolVector2Array( -0.264699, -21.665, -28.148, 15.345, 29.3477, 14.6426 )

[node name="StateMachine" type="Node" parent="." index="2"]
script = ExtResource( 2 )
initial_state = NodePath("Move/Travel")

[node name="Move" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 3 )
drag_linear_coeff = 0.001
reverse_multiplier = 1.0
drag_angular_coeff = 0.02

[node name="Travel" type="Node" parent="StateMachine/Move" index="0"]
script = ExtResource( 4 )

[node name="EngineAudio1" parent="StateMachine/Move/Travel" index="0" instance=ExtResource( 15 )]
volume_db = 1.5
pitch_scale = 0.5

[node name="EngineAudio2" parent="StateMachine/Move/Travel" index="1" instance=ExtResource( 15 )]
visible = false
volume_db = 0.5
pitch_scale = 1.0

[node name="EngineAudio3" parent="StateMachine/Move/Travel" index="2" instance=ExtResource( 15 )]
visible = false
volume_db = 0.5
pitch_scale = 1.0
bus = "Thrusters"

[node name="EngineAudio4" parent="StateMachine/Move/Travel" index="3" instance=ExtResource( 15 )]
visible = false
volume_db = 0.5
pitch_scale = 1.0

[node name="Dock" type="Node" parent="StateMachine/Move" index="1"]
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StateMachine/Move/Dock" index="0"]
stream = ExtResource( 24 )

[node name="Precision" type="Node" parent="StateMachine/Move" index="2"]
script = ExtResource( 7 )

[node name="EngineAudio1" parent="StateMachine/Move/Precision" index="0" instance=ExtResource( 15 )]
visible = false
volume_db = 1.5
pitch_scale = 0.5

[node name="EngineAudio2" parent="StateMachine/Move/Precision" index="1" instance=ExtResource( 15 )]
visible = false
volume_db = 0.5
pitch_scale = 1.0

[node name="EngineAudio3" parent="StateMachine/Move/Precision" index="2" instance=ExtResource( 15 )]
visible = false
volume_db = 0.5
pitch_scale = 1.0

[node name="EngineAudio4" parent="StateMachine/Move/Precision" index="3" instance=ExtResource( 15 )]
visible = false
volume_db = 0.5
pitch_scale = 1.0

[node name="CameraTransform" type="RemoteTransform2D" parent="." index="3"]

[node name="UITransform" type="RemoteTransform2D" parent="." index="4"]
remote_path = NodePath("../BarRig")
update_rotation = false

[node name="Gun" parent="." index="5"]
position = Vector2( -12.5, -30.8333 )
script = ExtResource( 9 )
Projectile = ExtResource( 14 )

[node name="Gun 2" parent="." index="6" instance=ExtResource( 21 )]
position = Vector2( 12.5, -30.8333 )

[node name="MapTimer" type="Timer" parent="." index="7"]

[node name="Cargo" type="Node" parent="." index="8"]
script = ExtResource( 10 )

[node name="VFX" type="Node2D" parent="." index="9"]
script = ExtResource( 18 )

[node name="MoveTrail1" parent="VFX" index="0" instance=ExtResource( 17 )]
position = Vector2( -40.8333, -12.5 )
scale = Vector2( 1.2, 1.2 )
amount = 3
lifetime = 0.1
speed_scale = 3.0
texture = ExtResource( 22 )
initial_velocity = 200.0
linear_accel = 50.0
damping = 500.0

[node name="MoveTrail2" parent="VFX" index="1" instance=ExtResource( 17 )]
position = Vector2( 40.8333, -12.5 )
scale = Vector2( 1.2, 1.2 )
amount = 3
lifetime = 0.1
speed_scale = 3.0
texture = ExtResource( 22 )
initial_velocity = 200.0
linear_accel = 50.0
damping = 500.0

[node name="MoveTrail3" parent="VFX" index="2" instance=ExtResource( 17 )]
position = Vector2( -3.8147e-06, -30.8333 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )
amount = 3
lifetime = 0.1
speed_scale = 3.0
texture = ExtResource( 22 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
initial_velocity = 200.0
linear_accel = 50.0
damping = 500.0

[node name="MoveTrail4" parent="VFX" index="3" instance=ExtResource( 17 )]
position = Vector2( 5.83334, 12.5 )
rotation = -0.904081
scale = Vector2( 1.2, 1.2 )
amount = 3
lifetime = 0.1
speed_scale = 3.0
texture = ExtResource( 22 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
initial_velocity = 200.0
linear_accel = 50.0
damping = 500.0

[node name="MoveTrail5" parent="VFX" index="4" instance=ExtResource( 17 )]
position = Vector2( -7.5, 12.5 )
rotation = 0.736529
scale = Vector2( 1.2, 1.2 )
amount = 3
lifetime = 0.1
speed_scale = 3.0
texture = ExtResource( 22 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
initial_velocity = 200.0
linear_accel = 50.0
damping = 500.0

[node name="DustRight" parent="VFX" index="5" instance=ExtResource( 19 )]
position = Vector2( 0, 20.2518 )
z_index = -1

[node name="DustLeft" parent="VFX" index="6" instance=ExtResource( 19 )]
visible = false
position = Vector2( 8.34465e-07, 20 )
rotation = 3.66519
z_index = -1

[node name="LaserGun" parent="." index="10" instance=ExtResource( 13 )]
visible = false
rotation = -1.57079
script = ExtResource( 12 )

[node name="MapTransform" parent="." index="11"]
position = Vector2( 1, 0 )
